# starpu_gemm_redux

./: CMakeLists.txt  gemm_redux.cc
results/: 6360260.err  6360260.out  6360271.err  6360271.out  6360281.err  6360281.out  submit.sh
